--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title> Gyanendra Giri </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <meta http-equiv="refresh" content="3; url=http:/gyanendragiri.com">
     </head>    
     
