--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title> Gyanendra Giri </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="refresh" content="3; url=http:/gyanendragiri.com">
+        <meta http-equiv="refresh" content="3; url=http://gyanendragiri.com">
     </head>    
     
