--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="3; url=http://gyanendragiri.com">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <title> Gyanendra Giri </title>
+        <meta name="description" content="I am a Web Consultant based in New Delhi" />
+
+
     </head>  
     
 </html>    
