--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title> Gyanendra Giri </title>
         <meta name="description" content="I am a Web Consultant based in New Delhi" />
-
-
     </head>  
+    <body>
+        <h1> Hello World! </h1>
+    </body>    
     
 </html>    
     
