--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>  
     <body>
         <h1> Hello World! </h1>
-        <p> Just another page </p>
+        <p> I am Gyanendra Giri, I am web consultant based in New Delhi, India.  </p>
+        
     </body>    
     
 </html>    
