--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
       <div class="row justify-content-center">
         <div class="col-xl-9 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="/#hero">GG</a></h1>
+          
+		 <a href="/#hero" class="logo mr-auto"><img src="assets/img/gyanendragiri_logo.png" alt="" class="img-fluid">
 
           <nav class="nav-menu d-none d-lg-block">
             <ul>
