--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-9 d-flex align-items-center">
           
-		 <a href="/#hero" class="logo mr-auto"><img src="assets/img/gyanendragiri_logo.png" alt="" class="img-fluid">
+		 <a href="/#hero" class="logo mr-auto"><img src="assets/img/gyanendragiri_logo.png" alt="" class="img-fluid"></a>
 
           <nav class="nav-menu d-none d-lg-block">
             <ul>
