--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Gyanendra Giri - Freelance Web Developer and Designer in New Delhi </title>
-  <meta content="" name="I am a Freelance Web Developer and Designer in New Delhi, I develop and design 
+  <meta name="description" content="I am a Freelance Web Developer and Designer in New Delhi, I develop and design 
      responsive and pixel perfect websites in PHP, MySQL,WordPress and custom CMS with SEO and speed optimization.">
-  <meta content="" name="Freelance Web Developer">
+  <meta name="keyword" content="Freelance Web Developer" >
+  	
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
