--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Gyanendra Giri - Freelance Web Developer and Designer in New Delhi </title>
-  <meta name="description" content="Gyanendra Gir is Freelance Web Developer, Website Designer in New Delhi. 
-				    He provides eCommerce website development services as well. He is expert website developer in India.">
+  <meta name="description" content="I am Freelance Web Developer, Website Designer in New Delhi. 
+				   Provides eCommerce website development services as well. I am expert website developer in India.">
   <meta name="keyword" content="Freelance Web Developer" >
   	
 
