--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Gyanendra Giri - Freelance Web Developer and Designer in New Delhi </title>
   <meta name="description" content="I am Freelance Web Developer, Website Designer in New Delhi. 
 				   Provides eCommerce website development services as well. I am expert website developer in India.">
-  <meta name="keyword" content="Freelance Web Developer" >
+  <meta name="keywords" content="Freelance Web Developer" >
   	
 
   <!-- Favicons -->
